src/allowlist/cloud-formation/llm-experiments.cfn.yaml
---
Mappings:
  # Redis requires an ACL for access control, so create default user with known
  # credentials. Note that this is not a security risk because Redis ingress
  # is restricted to the ECS security group.
  RedisCredentials:
    DefaultUser:
      # Must be at least 16 characters.
      Password: 'allowlistallowlist'
      Username: 'allowlist'
  Subnets:
    A:
      AvailabilityZone: 0
      CidrBlock: '10.0.1.0/24'
    B:
      AvailabilityZone: 1
      CidrBlock: '10.0.2.0/24'
    C:
      AvailabilityZone: 2
      CidrBlock: '10.0.3.0/24'
Resources:
  # Gateway attachment to the VPC, allowing access to the Internet.
  AttachGateway:
    Properties:
      InternetGatewayId: !Ref 'InternetGateway'
      VpcId: !Ref 'VPC'
    Type: 'AWS::EC2::VPCGatewayAttachment'
  # ECS cluster for running the allowlist server.
  ECSCluster:
    Type: 'AWS::ECS::Cluster'
  # ECS security group for the allowlist server.
  ECSSecurityGroup:
    Properties:
      GroupDescription: 'ECS security group'
      SecurityGroupEgress:
      - CidrIp: '0.0.0.0/0'
        FromPort: 6379
        IpProtocol: 'tcp'
        ToPort: 6379
      SecurityGroupIngress:
      - CidrIp: '0.0.0.0/0'
        IpProtocol: -1
      VpcId: !Ref 'VPC'
    Type: 'AWS::EC2::SecurityGroup'
  # ECS service for running the allowlist server.
  ECSService:
    Properties:
      Cluster: !Ref 'ECSCluster'
      DesiredCount: 1
      LaunchType: 'FARGATE'
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: 'ENABLED'
          SecurityGroups:
          - !Ref 'ECSSecurityGroup'
          Subnets:
          - !Ref 'SubnetA'
          - !Ref 'SubnetB'
          - !Ref 'SubnetC'
      TaskDefinition: !Ref 'TaskDefinition'
    Type: 'AWS::ECS::Service'
  # Role to allow VPC flow logs to be delivered to CloudWatch Logs.
  FlowLogRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action: 'sts:AssumeRole'
          Effect: 'Allow'
          Principal:
            Service: 'vpc-flow-logs.amazonaws.com'
        Version: '2012-10-17'
      Policies:
      - PolicyDocument:
          Statement:
          - Action:
            - 'logs:CreateLogGroup'
            - 'logs:CreateLogStream'
            - 'logs:PutLogEvents'
            - 'logs:DescribeLogGroups'
            - 'logs:DescribeLogStreams'
            Effect: 'Allow'
            Resource: '*'
          Version: '2012-10-17'
        PolicyName: 'flow-logs-policy'
    Type: 'AWS::IAM::Role'
  # A subnet for each availability zone in the VPC region.
  Fn::ForEach::Subnet:
  - 'Identifier'
  - - 'A'
    - 'B'
    - 'C'
  - Subnet${Identifier}:
      Properties:
        AvailabilityZone: !Select
        - !FindInMap
          - 'Subnets'
          - Ref: 'Identifier'
          - 'AvailabilityZone'
        - Fn::GetAZs: !Ref 'AWS::Region'
        CidrBlock: !FindInMap
        - 'Subnets'
        - Ref: 'Identifier'
        - 'CidrBlock'
        MapPublicIpOnLaunch: true
        VpcId: !Ref 'VPC'
      Type: 'AWS::EC2::Subnet'
  # A route table association for each subnet in the VPC.
  Fn::ForEach::SubnetRouteTableAssociation:
  - 'Identifier'
  - - 'A'
    - 'B'
    - 'C'
  - SubnetRouteTableAssociation${Identifier}:
      Properties:
        RouteTableId: !Ref 'PublicRouteTable'
        SubnetId: !Ref
          Fn::Sub:
          - 'Subnet${Identifier}'
          - Identifier: !Ref 'Identifier'
      Type: 'AWS::EC2::SubnetRouteTableAssociation'
  # Inbound network ACL rule for the VPC, allowing all traffic.
  InboundRule:
    Properties:
      CidrBlock: '0.0.0.0/0'
      Egress: false
      NetworkAclId: !Ref 'NetworkAcl'
      Protocol: -1
      RuleAction: 'allow'
      RuleNumber: 100
    Type: 'AWS::EC2::NetworkAclEntry'
  # Internet gateway for the VPC, allowing access to the Internet.
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
  # Log group for ECS task logging.
  LogGroup:
    Properties:
      LogGroupName: '/ecs/allowlist'
      RetentionInDays: 30
    Type: 'AWS::Logs::LogGroup'
  # Network ACL for the VPC.
  NetworkAcl:
    Properties:
      Tags:
      - Key: 'Name'
        Value: 'MyNetworkACL'
      VpcId: !Ref 'VPC'
    Type: 'AWS::EC2::NetworkAcl'
  # Outbound network ACL rule for the VPC, allowing all traffic.
  OutboundRule:
    Properties:
      CidrBlock: '0.0.0.0/0'
      Egress: true
      NetworkAclId: !Ref 'NetworkAcl'
      Protocol: -1
      RuleAction: 'allow'
      RuleNumber: 100
    Type: 'AWS::EC2::NetworkAclEntry'
  # Public route for the VPC, allowing access to the Internet.
  PublicRoute:
    Properties:
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
      RouteTableId: !Ref 'PublicRouteTable'
    Type: 'AWS::EC2::Route'
  # Public route table for the VPC, allowing access to the Internet.
  PublicRouteTable:
    Properties:
      VpcId: !Ref 'VPC'
    Type: 'AWS::EC2::RouteTable'
  # Redis database cluster.
  Redis:
    DependsOn:
    - 'RedisACL'
    Properties:
      ACLName: 'allowlist'
      ClusterName: 'allowlist'
      NodeType: 'db.t4g.small'
      SecurityGroupIds:
      - !Ref 'RedisIngressSecurityGroup'
      SubnetGroupName: !Ref 'SubnetGroup'
    Type: 'AWS::MemoryDB::Cluster'
  # Redis access control list for default user with full permissions.
  RedisACL:
    Properties:
      ACLName: 'allowlist'
      UserNames:
      - !FindInMap
        - 'RedisCredentials'
        - 'DefaultUser'
        - 'Username'
    Type: 'AWS::MemoryDB::ACL'
  # Ingress security group for Redis, allowing access from ECS tasks.
  RedisIngressSecurityGroup:
    Properties:
      GroupDescription: 'VPC ingress access to Redis cluster'
      SecurityGroupIngress:
      - FromPort: 6379
        IpProtocol: 'tcp'
        SourceSecurityGroupId: !Ref 'ECSSecurityGroup'
        ToPort: 6379
      VpcId: !Ref 'VPC'
    Type: 'AWS::EC2::SecurityGroup'
  # Redis user with full permissions.
  RedisUser:
    Properties:
      AccessString: 'on ~* &* +@all'
      AuthenticationMode:
        Passwords:
        - !FindInMap
          - 'RedisCredentials'
          - 'DefaultUser'
          - 'Password'
        Type: 'password'
      UserName: !FindInMap
      - 'RedisCredentials'
      - 'DefaultUser'
      - 'Username'
    Type: 'AWS::MemoryDB::User'
  # A subnet group containing all subnets in the VPC.
  SubnetGroup:
    Properties:
      SubnetGroupName: 'allowlist-subnet-group'
      SubnetIds:
      - !Ref 'SubnetA'
      - !Ref 'SubnetB'
      - !Ref 'SubnetC'
    Type: 'AWS::MemoryDB::SubnetGroup'
  # ECS task definition for the allowlist server.
  TaskDefinition:
    Properties:
      ContainerDefinitions:
      - Environment:
        - Name: 'REDIS_URL'
          Value: !Join
          - ''
          - - 'redis://'
            - !FindInMap
              - 'RedisCredentials'
              - 'DefaultUser'
              - 'Username'
            - ':'
            - !FindInMap
              - 'RedisCredentials'
              - 'DefaultUser'
              - 'Password'
            - '@'
            - !GetAtt
              - 'Redis'
              - 'ClusterEndpoint.Address'
            - ':6379'
        - Name: 'SERVER_URL'
          Value: '0.0.0.0:3000'
        Essential: true
        Image: 'econialabs/allowlist:0.4.0'
        LogConfiguration:
          LogDriver: 'awslogs'
          Options:
            awslogs-group: '/ecs/allowlist'
            awslogs-region: !Ref 'AWS::Region'
            awslogs-stream-prefix: 'ecs'
        Name: 'AllowlistContainer'
        PortMappings:
        - ContainerPort: 3000
          HostPort: 3000
          Protocol: 'tcp'
      Cpu: '256'
      ExecutionRoleArn: !GetAtt 'TaskExecutionRole.Arn'
      Family: 'AllowlistTask'
      Memory: '512'
      NetworkMode: 'awsvpc'
      RequiresCompatibilities:
      - 'FARGATE'
    Type: 'AWS::ECS::TaskDefinition'
  # ECS task execution role, required for running tasks in the ECS cluster.
  TaskExecutionRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action: 'sts:AssumeRole'
          Effect: 'Allow'
          Principal:
            Service: 'ecs-tasks.amazonaws.com'
        Version: '2012-10-17'
      Policies:
      - PolicyDocument:
          Statement:
          - Action:
            - 'ecr:GetDownloadUrlForLayer'
            - 'ecr:BatchGetImage'
            - 'ecr:BatchCheckLayerAvailability'
            - 'logs:CreateLogStream'
            - 'logs:PutLogEvents'
            Effect: 'Allow'
            Resource: '*'
          Version: '2012-10-17'
        PolicyName: 'ecsTaskExecutionRole'
    Type: 'AWS::IAM::Role'
  # Virtual private cloud for private networking access.
  VPC:
    Properties:
      CidrBlock: '10.0.0.0/16'
      EnableDnsHostnames: true
      EnableDnsSupport: true
    Type: 'AWS::EC2::VPC'
  # Flow log for delivering VPC flow logs to CloudWatch Logs.
  VPCFlowLog:
    Properties:
      DeliverLogsPermissionArn: !GetAtt 'FlowLogRole.Arn'
      LogDestinationType: 'cloud-watch-logs'
      LogGroupName: '/vpc/flow-logs'
      ResourceId: !Ref 'VPC'
      ResourceType: 'VPC'
      TrafficType: 'ALL'
    Type: 'AWS::EC2::FlowLog'
Transform: 'AWS::LanguageExtensions'
...
